fix: fix the spacing between image and text in index.html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -493,7 +493,7 @@ intro .carousel-container {
 # Sections General
 --------------------------------------------------------------*/
  section {
-   padding: 50px 0;
+   padding: 10px 0;
    overflow: hidden;
  }
 
